<resources>
    <string name="app_name">KreditCepat</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_pinjaman">Pinjaman</string>
    <string name="title_account">Akun</string>
    <string name="nama">Rokhani</string>
    <string name="email">fitryarokhani@gmail.com</string>
    <string name="no_telpon">085888842496</string>
    <string name="BASE_URL">http://kreditcepat.destinyconsultant.tech/</string>
    <string name="about_me">Saya merupakan seorang mahasiswa
 Semester 8 di Universitas Indrapasta PGRI Jurusan Teknik Informatika, Aplikasi ini dibuat untuk memenuhi Tugas Akhir dari kampus dan juga untuk mempermudah pengenalan Peminjaman Dana Online</string>
    <string-array name="jumlah_pinjaman">
        <item>Rp.1.000.000</item>
        <item>Rp.2.000.000</item>
        <item>Rp.3.000.000</item>
        <item>Rp.4.000.000</item>
        <item>Rp.5.000.000</item>
        <item>Rp.6.000.000</item>
        <item>Rp.7.000.000</item>
        <item>Rp.8.000.000</item>
    </string-array>
    <string-array name="hari_pinjaman">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>6</item>
        <item>7</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string name="syarat">
        •	Berumur 21 Tahun\n
        •	Memiliki nomor telepon selular yang benar/sah\n
        •	Memiliki EKTP yang berlaku\n
        •	Memiliki slip gaji yang terbaru (paling lama 2 bulan)\n
        •	Memiliki rekening bank untuk transfer dananya
    </string>
    <string name="about_us">Kreditcepat adalah perusahaan peminjaman dana jangka pendek berbasis online yang bertujuan untuk menyediakan dana tunai (uang yang langsung dikirim ke rekening bank klien) dalam waktu secepat mungkin tanpa agunan. Kami percaya bahwa kecepatan layanan peminjaman kami (Kreditcepat) sesuai dan sejalan dengan kebutuhan dan harapan klien masa kini di dunia yang serba cepat. Oleh karena itu, kami berupaya sebaik mungkin untuk mencairkan dana pinjaman ke rekening bank Anda dalam waktu 24 jam. Kepercayaan merupakan kunci dari kesuksesan dan kelanggengan sebuah hubungan kerjasama dan untuk memperoleh kepercayaan tersebut, kami tidak memberlakukan biaya atau persyaratan apapun selain yang kami telah informasikan kepada Anda.</string>
    <string name="alfa_fintech">Alfa Fintech Pte. Ltd., Singapura, adalah pemegang 85% saham dari PT Alfa Fintech Indonesia. Didirikan pada tanggal 15 Juli 2016 dengan nomor registrasi ACRA171026103147 Tanggal 26 Oktober 2017. Alfa Fintech Pte. Ltd berkedudukan di 156 Macpherson Road #09-01, PSL Industrial Building, Singapore (348528) dengan bidang usaha yang teregistrasi sebagai advertising activities.</string>
    <string name="ir_indrawan">Ir. Indrawan Suparan, warga negara Republik Indonesia, adalah pemegang saham PT Alfa Fintech Indonesia dengan 15% saham kepemilikan sejak didirikan. Ia merupakan alumnus dari Institut Teknik Bandung (ITB), Indonesia dan meraih gelar Magister Administrasi Bisnis (MBA) dari STMB Universitas Telkom, Indonesia pada tahun 1996. Pak Indrawan memulai karir sebagai Kepala Laboratorium Elektronika Pusat Riset Dirgantara di Lembaga Penerbangan dan Antariksa (LAPAN). Dia memiliki pengalaman sebagai Direktur Utama di berbagai perusahaan baik di dalam maupun luar negeri di industri keuangan, internet dan telekomunikasi.</string>
    <string name="adinda">Adinda Artemisia, warga negara Republik Indonesia, adalah Direktur Utama PT Alfa Fintech Indonesia. Adinda merupakan alumni dari Universitas Indonesia dan memulai karirnya di Public Relation agency, Arc Worldwide Indonesia. Beliau juga memiliki pengalaman bekerja di PT Bakrie Telecom Tbk menangani Marketing Communication untuk regional Jabodetabek Banten. Beliau memilki pengalaman lebih dari 10 tahun dalam bidang marketing komunikasi di perusahaan-perusahaan di berbagai industri seperti telco, otomotif, dan agensi periklanan multinasional dengan jabatan managerial dan direktoral sebelum akhirnya menjabat sebagai direktur di FinTech platform.</string>
    <string name="giovani">Giovani Clemente Bejarano, warga negara Meksiko ditunjuk sebagai Direktur Operasional PT Alfa Fintech Indonesia. Giovani memiliki pengetahuan yang mendalam tentang industri keuangan di mana ia telah bekerja selama lebih dari 15 tahun, dengan pengalaman di Bank HSBC di Mexico, broker asuransi dan perusahaan Fintech di Amerika Latin, Eropa dan Asia Tenggara. Giovani memiliki gelar sarjana hukum dan meraih gelar MBA (Magister Administrasi Bisnis) dari the Instituto Tecnologico y de Estudios Superiores de Monterrey di kota Meksiko yang merupakan salah satu Universitas terbaik di Amerika Latin.</string>
    <string name="cara">Manusia terlahir dengan rasa ingin tahu yang besar. \"Bagaimana caranya?\" adalah salah satu pertanyaan tertua di muka bumi ini. Cari tahu dan kenalilah produk kami.</string>
    <string name="bagaimana_cara">1.Tentukan jumlah pinjaman dan jangka waktu pada halaman web kreditcepat.co.id\nKlik tombol \"Dapatkan dana sekarang\"\n3.Buat akun Anda\n4.Jawab pertanyaan di formulir aplikasi\n5.Tunggu telepon dari kami\n6.Dapatkan uang di rekening Anda</string>
    <string name="pembayaran">Gunakanlah pilihan metode pembayaran yang lebih mudah dan lebih nyaman untuk membayar pinjaman Anda - DOKU. DOKU adalah layanan pembayaran elektronik yang dapat diandalkan di Indonesia.\nCukup dengan log in ke akun Anda, klik tombol bayar dan ikuti instruksi selanjutnya yang sudah disediakan.\nUntuk menjadi perhatiannya, DOKU menerapkan biaya transaksi sebesar Rp. 4.500.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
