<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.destinyapp.kreditcepat.Activity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.destinyapp.kreditcepat.Activity.ui.pinjaman.PinjamanFragment"
        android:label="@string/title_pinjaman"
        tools:layout="@layout/fragment_pinjaman" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.destinyapp.kreditcepat.Activity.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>
