<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_weight="1"
            app:lottie_loop="true"
            app:lottie_fileName="animation reverse orange wave.json"
            app:lottie_autoPlay="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY">

        </com.airbnb.lottie.LottieAnimationView>
    </LinearLayout>
    <ScrollView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                card_view:cardCornerRadius="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:id="@+id/ivHeader"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/meeting"
                            android:scaleType="fitXY"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@color/colorBlack"
                            android:alpha="0.4"/>
                        <LinearLayout
                            android:layout_centerInParent="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_margin="10dp">
                            <TextView
                                android:layout_above="@+id/tvTgl"
                                android:layout_marginLeft="5dp"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Tntang Kami"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:textColor="@color/colorWhite"/>
                            <TextView
                                android:layout_above="@+id/tvTgl"
                                android:layout_marginLeft="5dp"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Cepat, mudah, tanpa agunan Kreditcepat.co.id"
                                android:textStyle="bold"
                                android:textSize="15sp"
                                android:textColor="@color/colorWhite"/>
                        </LinearLayout>
                    </RelativeLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Tentang Kami"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorBlack"/>
            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/button_rounded_white">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="SHAREHOLDERS.LABEL"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/alfafintech"/>
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/alfa_fintech"
                            android:layout_marginTop="20dp"
                            android:textColor="@color/colorBlack"/>
                    </ScrollView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ir_indrawan"/>
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/ir_indrawan"
                                android:layout_marginTop="20dp"
                                android:textColor="@color/colorBlack"/>
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </LinearLayout>
        
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/button_rounded_white"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Dewan Komisaris"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ir_indrawan"/>
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/ir_indrawan"
                                android:layout_marginTop="20dp"
                                android:textColor="@color/colorBlack"/>
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/button_rounded_white"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Dewan Direksi"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/adinda"/>
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/adinda"
                                android:layout_marginTop="20dp"
                                android:textColor="@color/colorBlack"/>
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/giovani"/>
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/giovani"
                                android:layout_marginTop="20dp"
                                android:textColor="@color/colorBlack"/>
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>